<resources>
    <string name="app_name">Nam Covid-19 Tracer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="line_1_address">Line 1 Address</string>
    <string name="town">Town</string>
    <string name="preview_icon">Captured image preview</string>
    <string name="save_picture">Save Picture</string>
    <string name="take_picture">Take a Picture</string>
    <string name="btn_register">Create</string>
    <string name="cell_or_email">Email or Cellphone Number.</string>
    <string name="user_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="Place">Place</string>
    <string name="Person">Person</string>
    <string name="re_password">Confirm password</string>
    <string name="password">Choose a password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="my_profile">My Profile</string>
    <string name="visits">Places Visited</string>
    <string name="menu_notifications">Notifications</string>
    <string name="user_signout">Logout</string>
    <string name="save_btn">Register</string>
    <string name="find_user">Find</string>
    <string name="find_person">Find Person</string>
    <string name="user_avatar">Avatar</string>
    <string name="quarantine_case">Move case to quarantine?</string>
    <string name="no_place">No places found.</string>
    <string name="account_type">Select account type.</string>
    <string name="cases">Cases</string>
    <string name="search">Search</string>
    <string name="no_cases">No cases found. Click on the + icon to register a case.</string>
    <string name="select_gender">Select your gender</string>
    <string name="input_id">Enter your ID number</string>
    <string name="birth_date">Select your date of birth.</string>
    <string name="view">view</string>
    <string name="select_case_state">Select case status</string>
    <string name="export_to_excel">Export To Excel</string>
    <string name="find_case">Find Case</string>
    <string name="record_btn">Record</string>
    <string name="update_btn_txt">UPDATE</string>
    <string name="sure_to_exit">Do you really want to exit?</string>
    <string name="Cancel">Cancel</string>
    <string name="Exit">Exit</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_visit">New Visit</string>
    <string name="visitor_credential">Visitor\'s email or cellphone number</string>
    <string name="visitor_temperature">Visitor\'s temperature</string>
    <string name="about_developer">About Developer</string>
    <string name="info">Info</string>
    <string name="share_app">Share App</string>
    <string name="dev_qualification">BSc in Electrical and Computer Engineering\nUniversity of Cape Town</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>
    <string name="new_cases">New Cases:</string>
    <string name="point_of_contact">Find Point of Contact</string>
    <string name="name">Name</string>
    <string name="cellphone">Cellphone</string>
    <string name="email_address">Email Address</string>
    <string name="social_media">Social Media</string>
    <string name="follow_me">Twitter</string>
    <string name="linked_in">LinkedIn</string>
    <string name="update_profile">Update Profile</string>
    <string name="contacts">Contacts</string>
    <string name="OK">OK</string>
    <string name="verify_email">Email verification link has been sent to your email. Click on link to verify your email address.</string>
    <string name="resend_link">Resend Link</string>
    <string name="reset_btn">Reset</string>
    <string name="email_hint">Input your email address.</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="have_an_account">Already have an account? Sign In</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="create_account">Create new account?</string>
    <string name="enter_mobile">Enter your phone number</string>
    <string name="resend_code">Resend Code</string>
    <string name="btn_submit">Submit</string>
    <string name="input_phone_verify_code">Enter verification code sent to your phone.</string>
    <string name="twitter_url">https://twitter.com/intent/follow?user_id=48101720</string>
    <string name="linkedin_url">https://www.linkedin.com/in/petrus-kambala-2178789a/</string>
    <string name="profile">Profile</string>
    <string name="possible_contacts">Possible Contacts</string>
</resources>
