<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:context=".ui.authentication.EmailRegistrationFragment">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:padding="9dp"
                errorMsg="@{`Enter a valid name.`}"
                editContent="@{account.name}"
                android:hint="@string/name"
                android:inputType="text"
                android:text="@={account.name}"
                android:singleLine="true"
                /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cellphone_layout"
                android:visibility="@{authType == AuthType.PHONE?View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cellphone"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/cellphone"
                    android:inputType="phone"
                    android:digits="01234567890+"
                    android:text="@={account.cellphone}"
                    android:singleLine="true"
                    cellphone="@{account.cellphone}"
                    emailAddress="@{account.email}"
                    isEmail="@{false}"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_layout"
                android:visibility="@{authType == AuthType.EMAIL?View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cellphone_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={account.email}"
                    android:singleLine="true"
                    cellphone="@{account.cellphone}"
                    emailAddress="@{account.email}"
                    isEmail="@{true}"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_1_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    editContent="@{account.address_1}"
                    errorMsg="@{`Enter a valid address.`}"
                    android:hint="@string/line_1_address"
                    android:inputType="text"
                    android:text="@={account.address_1}"
                    android:singleLine="true"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/town_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_1_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/town"
                    editContent="@{account.town}"
                    errorMsg="@{`Enter a valid town name.`}"
                    android:inputType="text"
                    android:text="@={account.town}"
                    android:singleLine="true"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_layout"
                android:visibility="@{authType == AuthType.EMAIL?View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/town_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    password="@{password.text.toString()}"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{authType == AuthType.EMAIL?View.VISIBLE: View.GONE}"
                android:id="@+id/re_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    password="@{password.text.toString()}"
                    confirmPassword="@{confirmPassword.text.toString()}"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/account_type"
                android:id="@+id/account_type_layout"
                app:layout_constraintTop_toBottomOf="@id/re_password_layout"
                >
                <AutoCompleteTextView
                    android:id="@+id/account_type"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:text="@={BindingUtil.fromAccountType(account.accountType)}"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                style="@style/save_btn_outlined"
                app:layout_constraintTop_toBottomOf="@id/account_type_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/btn_register"
                accountName="@{account.name}"
                accountType="@{account.accountType.name()}"
                town="@{account.town}"
                address="@{account.address_1}"
                emailAddress="@{account.email}"
                cellphone="@{account.cellphone}"
                password="@{password.text.toString()}"
                confirmPassword="@{confirmPassword.text.toString()}"
                authType="@{authType.name()}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>
        <import type="android.view.View"/>
        <import type="com.petruskambala.nametracer.utils.BindingUtil"/>
        <import type="com.petruskambala.nametracer.model.AccountType"/>
        <import type="com.petruskambala.nametracer.model.AuthType"/>
        <variable
            name="authType"
            type="com.petruskambala.nametracer.model.AuthType" />

        <variable
            name="account"
            type="com.petruskambala.nametracer.model.Account" />
    </data>
</layout>
