<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            tools:context=".ui.authentication.EmailRegistrationFragment">

            <include
                android:id="@+id/user_avatar"
                layout="@layout/user_icon_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:cameraVisible="@{true}"
                bind:model="@{account}"
                bind:size="@{300}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_avatar"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_name"
                    editContent="@{account.name}"
                    errorMsg="@{`Enter a valid name.`}"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:text="@={account.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_1"
                    editContent="@{account.address_1}"
                    errorMsg="@{`Enter a valid address.`}"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/line_1_address"
                    android:inputType="text"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:text="@={account.address_1}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/town_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_1_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town"
                    editContent="@{account.town}"
                    errorMsg="@{`Enter a valid town name.`}"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/town"
                    android:inputType="text"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:text="@={account.town}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{account.accountType == AccountType.PERSONAL? View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/town_layout">

                <AutoCompleteTextView
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:focusable="false"
                    android:hint="@string/select_gender"
                    android:inputType="none"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:text="@={BindingUtil.fromGender(account.gender)}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{account.accountType == AccountType.PERSONAL? View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/birth_date"
                    android:inputType="none"
                    android:focusable="false"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:text="@={account.birthDate}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_type_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_type"
                app:layout_constraintTop_toBottomOf="@id/birth_date_layout">

                <AutoCompleteTextView
                    android:id="@+id/account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="9dp"
                    android:text="@={BindingUtil.fromAccountType(account.accountType)}"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_account"
                style="@style/save_btn_outlined"
                accountName="@{account.name}"
                accountType="@{BindingUtil.toAccountType(accountType.text)}"
                address="@{account.address_1}"
                town="@{account.town}"
                birthDate="@{account.birthDate}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/update_btn_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_type_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <import type="android.view.View" />

        <import type="com.petruskambala.nametracer.utils.BindingUtil" />

        <import type="com.petruskambala.nametracer.model.AccountType" />

        <variable
            name="account"
            type="com.petruskambala.nametracer.model.Person" />
    </data>
</layout>
