<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
                <AutoCompleteTextView
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:focusable="false"
                    android:text="@={BindingUtil.fromGender(person.gender)}"
                    android:hint="@string/select_gender"
                    android:inputType="none"
                    android:singleLine="true"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/national_id_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/national_id"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:hint="@string/input_id"
                    android:inputType="number"
                    app:userId="@{person.nationalId}"
                    android:text="@={person.nationalId}"
                    android:singleLine="true"
                    /></com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birth_date_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/national_id_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:focusable="false"
                    android:hint="@string/birth_date"
                    android:inputType="none"
                    android:text="@={person.birthDate}"
                    android:singleLine="true"
                    /></com.google.android.material.textfield.TextInputLayout>
            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                style="@style/save_btn_outlined"
                app:layout_constraintTop_toBottomOf="@id/birth_date_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/btn_register"
                nationalId="@{person.nationalId}"
                gender="@{person.gender}"
                birthDate="@{person.birthDate}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>
        <import type="com.petruskambala.namcovidcontacttracer.utils.BindingUtil"/>
        <variable
            name="person"
            type="com.petruskambala.namcovidcontacttracer.model.Person" />
    </data>
</layout>
